Break out of frames.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div>
 	
 		<div id="profileContainer">
-			<a href ="https://www.linkedin.com/in/rbholanath" style="text-decoration:none;">
+			<a href ="https://www.linkedin.com/in/rbholanath" style="text-decoration:none;" target="_top">
 				<div class="profile">
 					<div class="profileImage">
 						<img src="images/smaller_radjino.jpg" style="border:none;width:100%;height:100%;" />
@@ -24,7 +24,7 @@
 					</div>
 				</div>
 			</a>
-			<a href ="https://www.linkedin.com/in/sbholanath" style="text-decoration:none;">
+			<a href ="https://www.linkedin.com/in/sbholanath" style="text-decoration:none;" target="_top">
 				<div class="profile">
 					<div class="profileImage">
 						<img src="images/smaller_samanatha.jpg" style="border:none;width:100%;height:100%;" />
