--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
         <meta name="description" content="Bholanath.nl" />
         <meta name="keywords" content="bholanath, radjino, samanatha, programming, software development, legal counsel, jurist, recht, java" />
+        <meta name="robots" content="noindex" />
         <title>Bholanath.nl</title>
         <link href="style/style.css" type="text/css" rel="stylesheet" />
     </head>
